--- a/package.xml
+++ b/package.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>basic_amr_sensor</name>
-  <version>0.0.0</version>
+  <version>0.1.0</version>
   <description>The basic_amr_sensor package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="user@todo.todo">user</maintainer>
+  <maintainer email="lopez.alexander@utec.edu.pe">Alexander Lopez</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>BSD</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
@@ -24,8 +22,8 @@
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
   <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+
+  <author email="lopez.alexander@utec.edu.pe">Alexander Lopez</author>
 
 
   <!-- The *depend tags are used to specify dependencies -->
